log
Fri 29 Mar 2024 06:57:47 PM UTC: 
 tests:  0|6
total_score: 0/70
e296d19
Fri 29 Mar 2024 07:49:30 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:9: error: unused variable ‘nuevaLista’ [-Werror=unused-variable]
   32 |   List *nuevaLista = (List *)malloc(sizeof(List));
      |         ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4e4513e
Fri 29 Mar 2024 07:50:50 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
test.c: In function ‘createList’:
list.c:33:13: error: ‘*nuevaLista.head’ is used uninitialized [-Werror=uninitialized]
   33 |   nuevaLista->head->data = NULL;
      |   ~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
dee7e1b
Fri 29 Mar 2024 07:51:37 PM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
1f08198
Fri 29 Mar 2024 11:33:35 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  2|5
total_score: 15/70
f957d57
Fri 29 Mar 2024 11:35:32 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  2|5
total_score: 15/70
b79f385
Fri 29 Mar 2024 11:36:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
8467bbf
Fri 29 Mar 2024 11:37:55 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
821b63b
Fri 29 Mar 2024 11:38:27 PM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  2|5
total_score: 15/70
d4b76f9
Fri 29 Mar 2024 11:40:20 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
9000118
Fri 29 Mar 2024 11:40:40 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
1d4835f
Fri 29 Mar 2024 11:40:52 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
3e445b7
Fri 29 Mar 2024 11:41:43 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7c81056
Fri 29 Mar 2024 11:42:12 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
7d5c10c
Sat 30 Mar 2024 12:01:45 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
f000bbf
Sat 30 Mar 2024 12:02:30 AM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  0|0
91670b1
Sat 30 Mar 2024 12:03:24 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
c800dce
Sat 30 Mar 2024 12:04:00 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
4a08f32
Sat 30 Mar 2024 12:04:16 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
ad527b8
Sat 30 Mar 2024 12:08:08 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
3592a51
Sat 30 Mar 2024 12:14:28 AM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|4
total_score: 25/70
93b7c05
Sat 30 Mar 2024 12:16:05 AM UTC: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
 tests:  6|4
total_score: 25/70
bb81d66
Sat 30 Mar 2024 12:16:41 AM UTC: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  7|4
total_score: 25/70
35929e2
Sat 30 Mar 2024 12:17:33 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|4
total_score: 25/70
5516793
Sat 30 Mar 2024 12:17:57 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
8bb0fbd
Sat 30 Mar 2024 12:18:15 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
3cade87
Sat 30 Mar 2024 12:18:23 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
071b668
Sat 30 Mar 2024 12:29:48 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
In file included from test.c:5:
test.c: In function ‘pushFront’:
list.c:77:19: error: ‘nuevoNodo’ is used uninitialized [-Werror=uninitialized]
   77 |   nuevoNodo->data = data;
      |   ~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
f419af8
Sat 30 Mar 2024 12:30:19 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
test.c: In function ‘pushFront’:
list.c:77:19: error: ‘nuevoNodo’ is used uninitialized [-Werror=uninitialized]
   77 |   nuevoNodo->data = data;
      |   ~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
aa6944f
Sat 30 Mar 2024 12:32:33 AM UTC: 
 list.c | 7 +++----
 1 file changed, 3 insertions(+), 4 deletions(-)
 tests:  9|3
total_score: 35/70
0b2e42a
Sat 30 Mar 2024 12:35:36 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
411e9f7
Sat 30 Mar 2024 12:35:51 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
7b85c86
Sat 30 Mar 2024 12:39:27 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
79d73ac
Sat 30 Mar 2024 12:40:17 AM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  9|3
total_score: 35/70
c130b84
Sat 30 Mar 2024 12:40:59 AM UTC: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
f56c1ae
Sat 30 Mar 2024 12:41:36 AM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  10|2
total_score: 45/70
2f2ec7d
Sat 30 Mar 2024 12:54:23 AM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  0|0
a4c66bf
Sat 30 Mar 2024 12:56:24 AM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  10|2
total_score: 45/70
d9f4136
Sat 30 Mar 2024 01:02:24 AM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  10|2
total_score: 45/70
907ce5f
Sat 30 Mar 2024 01:09:14 AM UTC: 
 list.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  10|2
total_score: 45/70
8b1a823
Sat 30 Mar 2024 01:09:42 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  10|2
total_score: 45/70
409f236
Sat 30 Mar 2024 01:09:51 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 60/70
370fcaa
Sat 30 Mar 2024 01:20:25 AM UTC: 
 list.c | 19 +++++++++++++++++++
 1 file changed, 19 insertions(+)
 tests:  11|1
total_score: 60/70
3131853
Sat 30 Mar 2024 01:21:34 AM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  11|1
total_score: 60/70
9ec61aa
Sat 30 Mar 2024 01:22:39 AM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  11|1
total_score: 60/70
cebf85b
Sat 30 Mar 2024 01:26:30 AM UTC: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:102:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  102 |   if (list->current->prev != NULL)
      |   ^~
list.c:104:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  104 |     nuevoNodo->next = list->current;
      |     ^~~~~~~~~
list.c:106:3: error: this ‘if’ clause does not guard... [-Werror=misleading-indentation]
  106 |   if (list->current->next != NULL)
      |   ^~
list.c:108:5: note: ...this statement, but the latter is misleadingly indented as if it were guarded by the ‘if’
  108 |     nuevoNodo->prev = list->current->next;
      |     ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
5e9717c
Sat 30 Mar 2024 01:27:00 AM UTC: 
 list.c | 6 ++++++
 1 file changed, 6 insertions(+)
 tests:  11|1
total_score: 60/70
1578dd4
Sat 30 Mar 2024 01:27:31 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 60/70
a9cf2e9
Sat 30 Mar 2024 01:30:00 AM UTC: 
 list.c | 4 +---
 1 file changed, 1 insertion(+), 3 deletions(-)
 tests:  11|1
total_score: 60/70
140ba1d
Sat 30 Mar 2024 01:31:27 AM UTC: 
 list.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  11|1
total_score: 60/70
550ef76
Sat 30 Mar 2024 01:34:50 AM UTC: 
 list.c | 12 ++++++++++--
 1 file changed, 10 insertions(+), 2 deletions(-)
 tests:  11|1
total_score: 60/70
cc2fe07
